# display_led

./: CMakeLists.txt  README.md  tetris.cpp
ESP32_Server/: ESP32_Server.ino
src/: carskiy_tetris.cpp  common.h  config.h  display.cpp  display.h  main.cpp  picostd.h  picture.h  pin.cpp  pin.h  program.h  shift.cpp  shift.h  tetris.cpp  timer.h
src/programs/: carskiy_tetris.cpp  circles.cpp  program.h  programs.h  snake.cpp  spiner.cpp
